[project]
name = "gathering-reproducibility"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
      'anndata>=0.12.6',
      'arboreto>=0.1.6',
      'matplotlib>=3.10.7',
      'networkx>=3.5',
      'numpy>=2.3.4',
      'pandas>=2.3.3',
      'scanpy>=1.11.5',
      'scikit-learn>=1.7.2',
      'scipy>=1.16.3',
      'scvi-tools>=1.4.0',
      'seaborn>=0.13.2',
      'statsmodels>=0.14.5'
]
# this is some mac specific setting that needed to be removed for installing in linux docker
#[tool.uv]
#required-environments = [
#	"sys_platform == 'darwin' and platform_machine == 'x86_64'"
#]
